# lite-llm-proxy

./: .env-docker  .env-local  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  USER_GUIDE_CN.md  api_endpoints.md  config_manager.py  docker-compose.yml  docker-dev-stop.sh  docker-dev.sh  gunicorn_config.py  litellm_config.yaml  litellm_config.yaml.backup  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  test_config_sync.py
.iflycode/: team.json
data/: __init__.py  db.py  model_info.py  tables.py
docs/: DEPLOYMENT.md  INDEX.md
docs/04-design/04.1-overview/: config-sync-design.md
docs/04-design/04.2-detail/: config-sync-detail.md  (+3 more)
docs/05-api/: config-sync-api.md
docs/06-database/: config-checkpoint-table.md
docs/07-test/: config-sync-test.md
docs/08-defects/: DEFECT-001-model-404.md
docs/09-changelog/: v1.0.0.md  v1.1.0.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vitest.config.js
frontend/css/: style.css
frontend/js/: api.js  main.js
frontend/src/: App.jsx  main.jsx  styles.css
gateway/: app.py  config.py  dependencies.py  litellm_logger.py  local_model_manage.py  log_buffer.py  metrics.py  models.py  resilience.py  structured_logging.py
gateway/routers/: admin.py  llm.bk  llm.py  system.py
gateway/services/: config_sync_service.py
scripts/: init_db.sql  seed_test_data.py  sync_dependencies.py
tests/: test_api_endpoints.py  test_llm_serialization.py  test_model_config.py  test_model_config_defaults.py  test_optimizations.py  tmp.json
(+19 files in other folders)
